--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "fastify": "^4.17.0"
+    "@fastify/cors": "^8.2.1",
+    "fastify": "^4.17.0",
+    "zod": "^3.21.4"
   }
 }
